--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,5 +27,7 @@ flutter:
     - Assets/onBoarding/
     - Assets/onBoarding/OnBoarding2/
     - Assets/onBoarding/OnBoarding3/
+    - Assets/logos/
+    - Assets/person/
     - Assets/icons/
     - Assets/getStarted/
