login And SignUp Screen Done And Re Build get Stated Screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ flutter:
     - Assets/onBoarding/
     - Assets/onBoarding/OnBoarding2/
     - Assets/onBoarding/OnBoarding3/
+    - Assets/social Logo/
     - Assets/logos/
     - Assets/person/
     - Assets/icons/
