--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,13 @@ dependencies:
   percent_indicator: ^4.2.3
   table_calendar: ^3.1.2
   intl: ^0.19.0
+  firebase_core: ^3.5.0
+  firebase_auth: ^5.3.0
+  cloud_firestore: ^5.4.2
+  firebase_storage: ^12.3.1
+  image_picker: ^1.1.2
+  provider: ^6.1.2
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
