ui screen update and add task functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ flutter:
     - Assets/onBoarding/OnBoarding2/
     - Assets/onBoarding/OnBoarding3/
     - Assets/social Logo/
+    - Assets/ChatPerson/
     - Assets/logos/
     - Assets/person/
     - Assets/icons/
