--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   image_picker: ^1.1.2
   provider: ^6.1.2
   font_awesome_flutter: ^10.7.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
